input/v1.9.0/applications/launch-the-virtual-desktop-vdi.md
---
title: "Launch the Virtual Desktop (VDI)"
excerpt: ""
---
In the Applications menu, click on the **Desktop** button.
[block:callout]
{
  "type": "success",
  "title": "The VDI is launched within your browser!",
  "body": "A files browser opens automatically."
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/0RSJCit6S9mRPakLpcYc_applications-launchVDI.png",
        "applications-launchVDI.png",
        "2542",
        "1366",
        "#336fb4",
        ""
      ]
    }
  ]
}
[/block]

[block:image]
{
  "images": [
    {}
  ]
}
[/block]
Several buttons are available in the top bar:
* :fa-cloud-upload: dropdown menu listing the files uploaded from your local computer to the VDI
* :fa-cloud-download: dropdown menu listing the files downloaded in the VDI
* :fa-clone: copy/paste interface,
* :fa-circle: to record the installation of a new application
* :fa-power-off: to disconnect from your Windows session
* :fa-home: to redirect you to the main portal while keeping your VDI session open in the background
[block:api-header]
{
  "type": "basic",
  "title": "Copy and Paste"
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/HD36JWOxSZG2AXHmbzN4_applications-copy-paste.png",
        "applications-copy-paste.png",
        "996",
        "486",
        "#1e7ab9",
        ""
      ]
    }
  ]
}
[/block]
A copy and paste interface is available through the :fa-clone: icon to exchange text from your local computer to the VDI, and vice-versa.

**To copy and paste text in the VDI:**
1. Paste the text or write it in the provided area. Your text is automatically available in the VDI.
2. Paste your text wherever you want, in the VDI.

**To copy text from the VDI to paste it in your local computer:**
1. Copy the text in your application, or in your VDI.
2. Click on :fa-clone: to open the copy/paste interface.
3. Click on the text ":fa-laptop: Copy clipboard to local". Your text is now available in your local computer.
4. Paste your text wherever you want, in your local computer.
[block:callout]
{
  "type": "info",
  "title": "Reminder for Mac users",
  "body": "If you are a Mac user, remember that when you are in the VDI, you use a Windows environment. This is why, to copy or paste text, you cannot use the shortcuts cmd+C and cmd+V. Instead, use the Windows shortcuts: ctrl+C to copy and ctrl+V to paste."
}
[/block]